# AgenticRobotics

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  objective.example.yaml  objective.schema.json  pyproject.toml  robot_agentic_training_flow.md  robot_agentic_training_flow_gui.html
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agentic_robot/: __init__.py  cli.py  ledger.py  objective.py  scoring.py  state.py
context/RoboticKnowledges/: knowledge_index.md
context/RoboticKnowledges/agentic-ai/: README.md
context/RoboticKnowledges/classic-control-and-planning/: README.md
context/_lib/: approval_gate.md  review_skills.md  safety_rules.md  stay_active.md  workflow_contract.md
context/agents/: bug-reproducer.agent.md  devils-advocate.agent.md  executor.agent.md  focus-analyst.agent.md  free-analyst.agent.md  implementer.agent.md  online-researcher.agent.md  qa-engineer.agent.md
context/philosophy/: philosophy.instructions.md
context/repo_info/: codebase_overview.md  scripts_overview.md  update_logs.md
gui/: robot_agentic_training_flow_gui.html  robot_agentic_training_flow_request_template.md
recovery/: __init__.py  replay_checker.py  round_state.schema.json
skills/: index.md
tech_report/: README.md  dissemination_outline.md  idea_cards.md  paper_spec.md  tech_report.md
tests/: test_cli_integration.py  test_ledger_crash.py  test_objective_and_scoring.py  test_recovery.py  test_replay_properties.py  test_schemas_and_skills.py
(+36 files in other folders)
