[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-robot"
version = "0.1.0"
description = "Deterministic control-plane reference implementation for the robot_agentic_training_flow loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "robot_agentic_training_flow contributors" }]
dependencies = [
    "PyYAML>=6.0,<7.0",
    "jsonschema>=4.18,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
agentic-robot = "agentic_robot.cli:main"

[tool.setuptools]
packages = ["agentic_robot", "recovery"]

[tool.pytest.ini_options]
# Default discovery executes the recovery tests (and every other test under tests/).
testpaths = ["tests"]
python_files = ["test_*.py"]

# Lint/type gates target the new control-plane package. The pre-existing recovery/
# module and its tests predate these gates and are covered by compileall + pytest.
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["agentic_robot"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["agentic_robot"]
follow_imports = "silent"
ignore_missing_imports = true
